# gTerminal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gTerminal.cpp  gTerminal.hpp  gTerminal.inl  test.cpp
